tests/baselines/reference/parserDoStatement1.d.errors.txt
==== tests/cases/conformance/parser/ecmascript5/Statements/parserDoStatement1.d.ts (2 errors) ====
    do {
    ~~
!!! error TS1036: Statements are not allowed in ambient contexts.
    }
    while (e);
           ~
!!! error TS2304: Cannot find name 'e'.